@@ -1,5 +1,4 @@
 require 'rubygems'
 require 'rspec'
-
-$: << File.expand_path(File.join(File.dirname(__FILE__),"..","lib"))
+require 'hitimes'
 
